Fix #2: Trim spaces for url building

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <title>react-pokemon</title>
 
-<script src="http://fb.me/react-0.8.0.min.js"></script>
-<script src="http://fb.me/JSXTransformer-0.8.0.js"></script>
+<script src="//fb.me/react-0.10.0.min.js"></script>
+<script src="//fb.me/JSXTransformer-0.10.0.js"></script>
 <script src="pokemon.js"></script>
 
 <main></main>
